<resources>
    <string name="app_name">QR Test</string>
    <string name="title_activity_main">MainActivity</string>
    /* Bottom navigation bar */
    <string name="title_general_history">History</string>
    <string name="title_qr_reader">QR reader</string>
    <string name="title_menu">Menu</string>

    <string name="title_scripts">Scripts</string>
    /* Action
    <string name="cancel_text">Cancel</string>
    <string name="validate_actor">Enter actor id</string>
    <string name="ok_text">Ok</string>
    <string name="wrong_id">id is not true</string>
    <string name="more_text">More</string>
    <string name="notify_service_done">All data is ready.</string>
    <string name="notify_new_goal">New goal added! Check your goals.</string>
    <string name="qr_code_not_found">QR code not found!</string>
    <string name="character_text">Characters</string>
    <string name="new_goals_text">New goals</string>

    // AppMenu
    <string name="your_person_name_text">Your person - </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="media_type_audio">Audio</string>
    <string name="media_type_photo_video">Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="exit_text">Exit</string>
    <string name="action_logout">Logout</string>
    <string name="action_logout_info">Are you sure want to exit from your account? You lost all your saved data!</string>

    <string name="title_tips">Tips</string>
    <string name="title_location">Location</string>
    <string name="title_files">Files</string>
    <string name="title_timer">Timer</string>
    <string name="title_goals">Goals</string>
    <string name="title_characters_info">Actor info</string>
    <string name="title_history_scan">History Scan</string>
    <string name="title_roles">Roles</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_activity_maps">Map</string>

    <string name="test_text">Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?Are you sure want to exit from your account? You lost all your saved data?</string>
    <string name="not_aviable_text">Not available in this script</string>
</resources>
